--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -6,19 +6,14 @@
   background-color: $mainheadline-footer-color;
   background-image: linear-gradient($gradient, $gradient),
     url(../images/img-background-mobile@1x.jpg);
-  background-size: 100%;
-  background-size: cover;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-position: center;
-  margin: 0 auto;
-  margin-bottom: 60px;
-  padding: 0;
   width: 100%;
-  max-height: 400px;
-  max-width: 1600px;
-  align-items: center;
+  min-width: 320px;
   padding: 118px 0;
+  background-position: center;
+  background-size: cover;
+  margin: auto;
+  margin-bottom: 60px;
+  text-align: center;
 
   &__title {
     font-weight: 900;
@@ -48,9 +43,9 @@
   .banner {
     background-image: linear-gradient($gradient, $gradient),
       url(../images/img-background@1x.jpg);
-    min-width: 1200px;
-    max-width: 1600px;
-  max-height: 600px;
+   max-width: 1600px;
+    padding: 200px 0;
+    margin: 0;
 
     &__title {
     font-size: 44px;
