--- a/css/main.css
+++ b/css/main.css
@@ -1228,6 +1228,27 @@ input:checked + .checkbox__icon {
   text-decoration: underline;
 }
 
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
+  .modal__header {
+    line-height: 1.4375em;
+    text-align: center;
+  }
+  .modal__input {
+    width: 448px;
+    height: 40px;
+    padding-left: 42px;
+    margin-bottom: 10px;
+  }
+  .modal__comment {
+    width: 448px;
+    height: 138px;
+    padding: 12px 16px;
+  }
+}
 .newsletter {
   margin: 0 auto;
   -webkit-box-align: center;
