--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -152,6 +152,30 @@
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+
+    &__header {
+      line-height: 1.4375em;
+      text-align: center;
+    }
+
+    &__input {
+      width: 448px;
+      height: 40px;
+      padding-left: 42px;
+      margin-bottom: 10px;
+    }
+
+    &__comment {
+      width: 448px;
+      height: 138px;
+      padding: 12px 16px;
+    }
+  }
+}
 
 // .backdrop {
 //   display: flex;
