--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -42,27 +42,13 @@
   }
 }
 
-// .clients {
-//   list-style: none;
-//   display: flex;
-//   gap: 30px;
-//   align-items: center;
-// }
+@media screen and (min-width: 1200px) {
+  .clients {
+    max-width: 1600px;
+    width: 100%;
+    margin: auto;
+  gap: 30px;
 
-// .clients__link {
-//   border: 1px solid $icons-color;
-//   fill: $icons-color;
-//   border-radius: 4px;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   width: 170px;
-//   height: 92px;
-//   transition: border-color 250ms $transition-fn, fill 250ms $transition-fn;
+}
 
-//   &:hover,
-//   &:focus-within {
-//     fill: $button-backgroundnhover-color;
-//     border-color: $button-backgroundnhover-color;
-//   }
-// }
+}
