--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -11,7 +11,7 @@
   padding: 118px 0;
   background-position: center;
   background-size: cover;
-  margin: auto;
+  margin: 0 auto;
   margin-bottom: 60px;
   text-align: center;
 
@@ -45,7 +45,7 @@
       url(../images/img-background@1x.jpg);
    max-width: 1600px;
     padding: 200px 0;
-    margin: 0;
+    margin: 0 auto;
 
     &__title {
     font-size: 44px;
