--- a/sass/components/_lorem.scss
+++ b/sass/components/_lorem.scss
@@ -9,6 +9,7 @@
   max-width: 1600px;
   width: 100%;
   margin: auto;
+  
 
   &__icon {
     width: 70px;
@@ -17,6 +18,8 @@
     text-align: center;
     max-width: 1600px;
     width: 100%;
+    margin: auto;
+    flex-basis: 100%;
   }
 
   &__text {
@@ -31,40 +34,32 @@
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .lorem {
-    min-width: 768px;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
-    width: 100%;
-    margin-top: 60px;
+    max-width: 100%;
 
     &__item {
-      display: flex;
       flex-basis: calc((100% - 30px) / 2);
-      flex-wrap: wrap;
-      width: 100%;
     }
   }
 }
 
 @media screen and (min-width: 1200px) {
   .lorem {
-    max-width: 1600px;
-    width: 100%;
-    margin: auto;
-    list-style: none;
     display: flex;
+    justify-content: center;
+    margin: auto;
     gap: 30px;
-    padding-bottom: 0;
+    max-width: 1600px;
     
 
     &__icon {
-      max-width: 1600px;
-      width: 100%;
-      margin: auto;
-      width: 270px;
-      height: 120px;
-      background-color: $alternative-button-background-color;
-      padding: 25px 100px;
+      max-width: 270px;
     }
+
+     &__text {
+    max-width: 100%;
+  }
   }
 }
