--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -62,6 +62,23 @@
   }
 }
 
+// @media screen and (min-width: 1200px) {
+//   .button {
+//     max-width: 200px;
+
+//       &--newsletter {
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     font-weight: 700;
+//     padding: 0;
+//     width: 200px;
+//     height: 50px;
+//     gap: 24px;
+//   }
+//   }
+// }
+
 
 // .button {
 //   text-align: center;
