--- a/sass/components/_resets.scss
+++ b/sass/components/_resets.scss
@@ -41,6 +41,7 @@ img {
 @media screen and (min-width: 1200px) {
   .container {
     max-width: 1200px;
+    width: 100%;
     padding: 0 15px;
     margin: 0 auto;
     align-items: center;
