--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -6,8 +6,7 @@
   background-color: $mainheadline-footer-color;
   background-image: linear-gradient($gradient, $gradient),
     url(../images/img-background-mobile@1x.jpg);
-  width: 100%;
-  min-width: 320px;
+  max-width: 100%;
   padding: 118px 0;
   background-position: center;
   background-size: cover;
@@ -32,12 +31,33 @@
   }
 }
 
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+    .banner {
+     background-color: $mainheadline-footer-color;
+  background-image: linear-gradient($gradient, $gradient),
+    url(../images/img-background-mobile@2x.jpg);
+    }
+  }
+
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .banner {
     background-image: linear-gradient($gradient, $gradient),
       url(../images/img-background-tablet@1x.jpg);
   }
+
+  @media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+    .banner {
+     background-color: $mainheadline-footer-color;
+  background-image: linear-gradient($gradient, $gradient),
+    url(../images/img-background-tablet@2x.jpg);
+    }
+  }
 }
+
 
 @media screen and (min-width: 1200px) {
   .banner {
@@ -51,6 +71,16 @@
     font-size: 44px;
     line-height: 1.36em;   
   }
+  }
+
+  @media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+    .banner {
+     background-color: $mainheadline-footer-color;
+  background-image: linear-gradient($gradient, $gradient),
+    url(../images/img-background-desktop@2x.jpg);
+    }
   }
 }
 
