mobile menu update

--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -15,7 +15,7 @@
   border: none;
   &:hover,
   &:focus {
-    color: $button-backgroundnhover-color;
+    fill: $button-backgroundnhover-color;
   }
 }
 
