--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,3 +17,4 @@
 @import "./components/footer";
 @import "./components/modal";
 @import "./components/newsletter";
+@import "./components/mobile-menu";
