--- a/css/main.css
+++ b/css/main.css
@@ -1365,4 +1365,34 @@ input:checked + .checkbox__icon {
         -ms-flex-direction: row;
             flex-direction: row;
   }
+}
+.button-container {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.mobile-menu-button {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+}
+.mobile-menu-button:hover, .mobile-menu-button:focus {
+  fill: #2196f3;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .button-container {
+    display: none;
+  }
 }/*# sourceMappingURL=main.css.map */
