--- a/css/main.css
+++ b/css/main.css
@@ -6,9 +6,6 @@ body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   min-width: 320px;
-  width: 100%;
-  margin: 0 auto;
-  padding: 0;
 }
 
 * {
@@ -47,13 +44,13 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .container {
-    max-width: 1200px;
+    max-width: 1600px;
     width: 100%;
-    padding: 0 15px;
-    margin: 0 auto;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    padding: 0 15px;
+    margin: 0 auto;
   }
   .section {
     padding-top: 94px;
@@ -229,7 +226,6 @@ img {
   gap: 50px;
   margin-left: auto;
   display: none;
-  padding: 0;
 }
 .contact--footer {
   -webkit-box-orient: vertical;
@@ -409,7 +405,8 @@ img {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-background@1x.jpg);
     max-width: 1600px;
     padding: 200px 0;
-    margin: 0 auto;
+    margin: auto;
+    width: 100%;
   }
   .banner__title {
     font-size: 44px;
@@ -1367,10 +1364,7 @@ input:checked + .checkbox__icon {
   }
 }
 .button-container {
-  padding-left: 15px;
-  padding-right: 15px;
   margin-left: auto;
-  margin-right: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1391,8 +1385,109 @@ input:checked + .checkbox__icon {
   fill: #2196f3;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .button-container {
     display: none;
   }
+}
+.menu-container {
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 40px;
+  background-color: white;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform 250ms ease-in-out;
+  transition: -webkit-transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
+}
+
+.menu-close {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  border: none;
+  background-color: transparent;
+}
+.menu-close:hover, .menu-close:focus {
+  fill: #2196f3;
+}
+
+.menu-container.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.mobile-menu-list,
+.mobile-menu-contacts,
+.mobile-menu__social-list {
+  list-style: none;
+  padding: 0;
+}
+
+.mobile-link,
+.mobile-link--tel,
+.mobile-menu__social-item,
+.mobile-menu__social-item--no-border {
+  text-decoration: none;
+  font-size: 40px;
+}
+
+.mobile-menu__social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 64px;
+}
+
+.mobile-menu__social-item {
+  border-right: solid 1px rgba(33, 33, 33, 0.2);
+  padding: 0 10px;
+  font-size: 18px;
+  line-height: 1.22;
+  font-weight: 500;
+  color: #2196f3;
+}
+.mobile-menu__social-item--no-border {
+  border-right: none;
+  padding: 0 10px;
+  font-size: 18px;
+  line-height: 1.22;
+  font-weight: 500;
+  color: #2196f3;
+}
+
+.mobile-link {
+  color: #212121;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+  padding: 10px;
+  display: block;
+}
+.mobile-link--tel {
+  color: #2196f3;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+  padding: 10px;
+  display: block;
+}
+
+.mobile-link:hover {
+  color: #2196f3;
 }/*# sourceMappingURL=main.css.map */
