--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -65,7 +65,8 @@
       url(../images/img-background@1x.jpg);
    max-width: 1600px;
     padding: 200px 0;
-    margin: 0 auto;
+    margin: auto;
+    width: 100%;
 
     &__title {
     font-size: 44px;
