--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,10 +1,8 @@
 @import "../utils/variables";
 
 .button-container {
-  padding-left: 15px;
-  padding-right: 15px;
+
   margin-left: auto;
-  margin-right: 15px;
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -19,8 +17,93 @@
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px)  {
   .button-container {
     display: none;
   }
+}
+
+
+.menu-container {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 40px;
+  background-color: $button-text-color;
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+}
+.menu-close {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  border: none;
+  background-color: transparent;
+  &:hover,
+  &:focus {
+    fill: $button-backgroundnhover-color;
+  }
+
+}
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+.mobile-menu-list,
+.mobile-menu-contacts,
+.mobile-menu__social-list {
+  list-style: none;
+  padding: 0;
+}
+
+.mobile-link,
+.mobile-link--tel,
+.mobile-menu__social-item,
+.mobile-menu__social-item--no-border {
+  text-decoration: none;
+  font-size: 40px;
+}
+.mobile-menu__social-list {
+  display: flex;
+  padding-top: 64px;
+}
+.mobile-menu__social-item {
+  border-right: solid 1px rgba(33, 33, 33, 0.2);
+  padding: 0 10px;
+  font-size: 18px;
+  line-height: 1.22;
+  font-weight: 500;
+  color: $button-backgroundnhover-color;
+  &--no-border {
+    border-right: none;
+    padding: 0 10px;
+    font-size: 18px;
+    line-height: 1.22;
+    font-weight: 500;
+    color: $button-backgroundnhover-color;
+  }
+}
+.mobile-link {
+  color: $main-text-color;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+  padding: 10px;
+  display: block;
+  &--tel {
+    color: $button-backgroundnhover-color;
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.17;
+    padding: 10px;
+    display: block;
+  }
+}
+.mobile-link:hover {
+  color: $button-backgroundnhover-color;
 }
