--- a/css/main.css
+++ b/css/main.css
@@ -134,6 +134,11 @@ img {
 @media screen and (min-width: 1200px) {
   .logo {
     font-size: 26px;
+    text-align: left;
+  }
+  .logo--footer > span {
+    color: white;
+    text-align: left;
   }
 }
 .nav {
@@ -489,6 +494,26 @@ img {
   gap: 24px;
 }
 
+@media screen and (min-width: 1200px) {
+  .button__newsletter {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    font-weight: 700;
+    width: 200px;
+    height: 50px;
+    padding: 0;
+    gap: 0;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
 .headline-h2 {
   font-weight: 700;
   font-size: 28px;
@@ -567,13 +592,13 @@ img {
     font-size: 14px;
     line-height: 1em;
     letter-spacing: 0.03em;
+    text-align: left;
   }
   .headline-h5--lorem {
     margin-top: 30px;
     margin-bottom: 10px;
     padding: 0;
     color: #212121;
-    text-align: center;
   }
   .headline-h5--footer {
     color: white;
@@ -1333,8 +1358,8 @@ input:checked + .checkbox__icon {
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: #2f303a;
-  width: 100%;
-  max-width: 358px;
+  width: 358px;
+  max-width: 100%;
   height: 50px;
   padding-left: 16px;
   line-height: 1.25em;
@@ -1361,6 +1386,17 @@ input:checked + .checkbox__icon {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .newsletter__textbutton {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.875em;
+    text-align: center;
+    white-space: nowrap;
+    letter-spacing: 0.06em;
   }
 }
 .button-container {
