--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -62,6 +62,22 @@
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .button__newsletter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+    width: 200px;
+    height: 50px;
+    padding: 0;
+ gap: 0;
+    justify-content: space-around;
+  
+  }
+}
+
+
 // @media screen and (min-width: 1200px) {
 //   .button {
 //     max-width: 200px;
