--- a/sass/components/_headlines.scss
+++ b/sass/components/_headlines.scss
@@ -22,6 +22,7 @@
   font-size: 14px;
   line-height: 1em;
   letter-spacing: 0.03em;
+  
 
   &--lorem {
     margin-top: 30px;
@@ -85,13 +86,14 @@
     font-size: 14px;
     line-height: 1em;
     letter-spacing: 0.03em;
+    text-align: left;
 
     &--lorem {
       margin-top: 30px;
       margin-bottom: 10px;
       padding: 0;
       color: $main-text-color;
-      text-align: center;
+      
     }
 
     &--footer {
