--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -30,5 +30,11 @@
 @media screen and (min-width: 1200px)  {
 .logo {
   font-size: 26px;
+  text-align: left;
+
+  &--footer > span {
+  color: $button-text-color;
+  text-align: left;
+}
 }
 }
