--- a/sass/components/_newsletter.scss
+++ b/sass/components/_newsletter.scss
@@ -23,8 +23,8 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     background-color: $mainheadline-footer-color;
-    width: 100%;
-    max-width: 358px;
+    width: 358px;
+    max-width: 100%;
     height: 50px;
     padding-left: 16px;
     line-height: 1.25em;
@@ -37,24 +37,30 @@
     font-size: 16px;
     line-height: 1.875em;
     text-align: center;
-
     letter-spacing: 0.06em;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .newsletter {
-  margin-left: auto;
+    margin-left: auto;
 
-&__form {
-  display: flex;
-  flex-direction: row;
+    &__form {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+    }
+
+    &__textbutton {
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 1.875em;
+      text-align: center;
+      white-space: nowrap;
+      letter-spacing: 0.06em;
+    }
+  }
 }
-
-}
-}
-
-
 
 // &__mail {
 //   margin-right: 12px;
