--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -32,6 +32,10 @@
   font-size: 26px;
   text-align: left;
 
+&--footer {
+  display: block;
+}
+
   &--footer > span {
   color: $button-text-color;
   text-align: left;
