--- a/sass/components/_newsletter.scss
+++ b/sass/components/_newsletter.scss
@@ -5,7 +5,7 @@
   align-items: center;
   text-align: center;
   justify-content: center;
-  max-width: 480px;
+  
   width: 100%;
 
   &__form {
@@ -43,12 +43,16 @@
 
 @media screen and (min-width: 1200px) {
   .newsletter {
-    margin-left: auto;
+    margin-left: 20px;
 
     &__form {
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
+    }
+
+    &__label {
+      display: none;
     }
 
     &__textbutton {
@@ -58,6 +62,7 @@
       text-align: center;
       white-space: nowrap;
       letter-spacing: 0.06em;
+
     }
   }
 }
