--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -10,6 +10,15 @@
   transition: background-color 250ms $transition-fn, color 250ms $transition-fn,
     box-shadow 250ms $transition-fn;
 
+    &:hover,
+&:focus {
+  background-color: $button-backgroundnhover-color;
+  color: $button-text-color;
+  cursor: pointer;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
   &--banner {
      font-weight: 700;
   line-height: 1.875em;
