--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -55,7 +55,7 @@
   right: 8px;
   background-color: $button-text-color;
   color: $main-text-color;
-  border: 1px solid $icons-color;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
 }
     
@@ -82,8 +82,19 @@
     padding: 0;
  gap: 0;
     justify-content: space-around;
-  
   }
+
+   .button--modal {
+  width: 200px;
+  height: 50px;
+  color: $button-text-color;
+  background-color: $button-backgroundnhover-color;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  margin-top: 30px;
+  margin-left: 164px;
+  margin-right: 164px;
+  margin-bottom: 40px;
+   }
 }
 
 
@@ -144,17 +155,7 @@
 //   margin-bottom: 200px;
 // }
 
-// &--modal {
-//   width: 200px;
-//   height: 50px;
-//   color: $button-text-color;
-//   background-color: $button-backgroundnhover-color;
-//   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-//   margin-top: 30px;
-//   margin-left: 164px;
-//   margin-right: 164px;
-//   margin-bottom: 40px;
-// }
+//
 
 // &--modal-close {
 //   position: absolute;
