--- a/sass/components/_resets.scss
+++ b/sass/components/_resets.scss
@@ -21,7 +21,7 @@ img {
 @media screen and (max-width: 768px) {
 .container {
   min-width: 320px;
-  max-width: 480px;
+  width: 100%;
   padding: 0 15px;
   margin: 0 auto;
   align-items: center;
