--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ img {
 @media screen and (max-width: 768px) {
   .container {
     min-width: 320px;
-    max-width: 480px;
+    width: 100%;
     padding: 0 15px;
     margin: 0 auto;
     -webkit-box-align: center;
@@ -78,6 +78,10 @@ img {
           justify-content: space-between;
 }
 
+.header__nav {
+  display: none;
+}
+
 .header-bottomline {
   border-bottom: 1px solid #ececec;
 }
@@ -85,6 +89,9 @@ img {
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .header-container {
     margin: auto;
+  }
+  .header__nav {
+    display: block;
   }
   .header-bottomline {
     min-width: 768px;
@@ -106,6 +113,9 @@ img {
         -ms-flex-align: center;
             align-items: center;
     margin: auto;
+  }
+  .header__nav {
+    display: block;
   }
 }
 .logo {
@@ -360,7 +370,8 @@ img {
   background-color: #2f303a;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/img-background-mobile@1x.jpg);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-background-mobile@1x.jpg);
-  max-width: 100%;
+  min-width: 320px;
+  width: 100%;
   padding: 118px 0;
   background-position: center;
   background-size: cover;
@@ -751,11 +762,14 @@ img {
           align-items: center;
   gap: 30px;
   width: 100%;
+  padding: 0;
 }
 .team__item {
   background-color: white;
-  margin-bottom: 30px;
   width: 100%;
+  max-width: 450px;
+  margin: auto;
+  margin-bottom: 30px;
 }
 .team__img {
   width: 100%;
@@ -1189,7 +1203,9 @@ img {
 
 .modal {
   position: relative;
-  width: 450px;
+  min-width: 320px;
+  max-width: 450px;
+  width: 100%;
   height: 609px;
   background-color: white;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1209,6 +1225,9 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  min-width: 320px;
+  max-width: 450px;
+  width: 100%;
 }
 .modal__header {
   font-weight: 700;
@@ -1229,7 +1248,7 @@ img {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 4px;
-  padding-left: 40px;
+  margin: auto;
   font-weight: 400;
   font-size: 12px;
   line-height: 0.875em;
@@ -1273,7 +1292,7 @@ img {
 .modal__icon {
   position: absolute;
   top: 40%;
-  left: 12%;
+  left: 3%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
