--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -24,7 +24,9 @@
 
 .modal {
   position: relative;
-  width: 450px;
+  min-width: 320px;
+  max-width: 450px;
+  width: 100%;
   height: 609px;
   background-color: $button-text-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -36,6 +38,9 @@
   &__form {
     display: flex;
     flex-direction: column;
+    min-width: 320px;
+  max-width: 450px;
+  width: 100%;
   }
 
   &__header {
@@ -53,7 +58,7 @@
     display: flex;
     flex-direction: column;
     gap: 4px;
-    padding-left: 40px;
+    margin: auto;
     font-weight: 400;
     font-size: 12px;
     line-height: 0.875em;
@@ -100,7 +105,7 @@
   &__icon {
     position: absolute;
     top: 40%;
-    left: 12%;
+    left: 3%;
     align-items: center;
     justify-content: center;
     fill: $main-text-color;
