--- a/css/main.css
+++ b/css/main.css
@@ -1028,8 +1028,11 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  min-width: 320px;
   max-width: 480px;
   padding: 0 15px;
+  width: 100%;
+  margin: auto;
   margin-bottom: 60px;
 }
 
