--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -8,8 +8,11 @@
   align-items: center;
   flex-basis: calc((100% - 30px) / 2);
   justify-content: center;
+  min-width: 320px;
   max-width: 480px;
   padding: 0 15px;
+  width: 100%;
+  margin: auto;
   margin-bottom: 60px;
 }
 
@@ -34,11 +37,11 @@
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .clients {
-   flex-basis: calc((100% - 30px) / 2);
-  justify-content: center;
-  min-width: 768px;
-  padding: 0 15px;
-  margin-bottom: 60px;
+    flex-basis: calc((100% - 30px) / 2);
+    justify-content: center;
+    min-width: 768px;
+    padding: 0 15px;
+    margin-bottom: 60px;
   }
 }
 
@@ -47,8 +50,6 @@
     max-width: 1200px;
     width: 100%;
     margin: auto;
-  gap: 30px;
-
-}
-
+    gap: 30px;
+  }
 }
