--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ img {
 @media screen and (max-width: 768px) {
   .container {
     min-width: 320px;
+    max-width: 1200px;
     width: 100%;
     padding: 0 15px;
     margin: 0 auto;
@@ -34,12 +35,12 @@ img {
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .container {
-    max-width: 768px;
     padding: 0 15px;
     margin: 0 auto;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    width: 100%;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -831,6 +832,7 @@ img {
             justify-content: space-evenly;
     margin: 0 auto;
     width: 100%;
+    max-width: 1200px;
   }
 }
 /* SOCIALS team & footer */
@@ -1013,27 +1015,39 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  gap: 30px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -ms-flex-preferred-size: calc((100% - 30px) / 2);
       flex-basis: calc((100% - 30px) / 2);
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  min-width: 320px;
-  max-width: 480px;
-  padding: 0 15px;
-  width: 100%;
-  margin: auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 30px;
+  margin: 0 auto;
   margin-bottom: 60px;
+  max-width: 480px;
+}
+
+.clients__item {
+  max-width: 100%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-preferred-size: calc((100% - 30px) / 2);
+      flex-basis: calc((100% - 30px) / 2);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 30px;
 }
 
 .clients__link {
@@ -1049,11 +1063,11 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 170px;
+  width: 100%;
+  margin: 0 auto;
   height: 92px;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  max-width: 480px;
 }
 .clients__link:hover, .clients__link:focus-within {
   fill: #2196f3;
@@ -1062,22 +1076,46 @@ img {
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .clients {
-    -ms-flex-preferred-size: calc((100% - 30px) / 2);
-        flex-basis: calc((100% - 30px) / 2);
+    -ms-flex-preferred-size: calc((100% - 60px) / 3);
+        flex-basis: calc((100% - 60px) / 3);
+    max-width: 1199px;
+  }
+  .clients__item {
+    max-width: 100%;
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-preferred-size: calc((100% - 60px) / 3);
+        flex-basis: calc((100% - 60px) / 3);
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    min-width: 768px;
-    padding: 0 15px;
-    margin-bottom: 60px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 30px;
   }
 }
 @media screen and (min-width: 1200px) {
   .clients {
     max-width: 1200px;
-    width: 100%;
-    margin: auto;
-    gap: 30px;
+    margin: 0 auto;
+  }
+  .clients__item {
+    max-width: 100%;
+    margin: 0 auto;
+    -webkit-box-flex: 0;
+        -ms-flex: none;
+            flex: none;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 .footer {
@@ -1206,9 +1244,8 @@ img {
 
 .modal {
   position: relative;
-  min-width: 320px;
-  max-width: 450px;
-  width: 100%;
+  width: 320px;
+  max-width: 100%;
   height: 609px;
   background-color: white;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1228,9 +1265,7 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  min-width: 320px;
-  max-width: 450px;
-  width: 100%;
+  max-width: 320px;
 }
 .modal__header {
   font-weight: 700;
@@ -1271,12 +1306,13 @@ img {
 .modal__input {
   position: relative;
   outline: none;
-  width: 370px;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 42px;
+  margin: auto;
   margin-bottom: 10px;
+  max-width: 100%;
 }
 .modal__comment {
   resize: none;
@@ -1295,7 +1331,7 @@ img {
 .modal__icon {
   position: absolute;
   top: 40%;
-  left: 3%;
+  left: 13%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
