--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -2,18 +2,25 @@
 
 .clients {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  gap: 30px;
-  align-items: center;
   flex-basis: calc((100% - 30px) / 2);
   justify-content: center;
-  min-width: 320px;
-  max-width: 480px;
-  padding: 0 15px;
-  width: 100%;
-  margin: auto;
+  align-items: center;
+  gap: 30px;
+  margin: 0 auto;
   margin-bottom: 60px;
+  max-width: 480px;
+}
+
+.clients__item {
+  max-width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  flex-basis: calc((100% - 30px) / 2);
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
 }
 
 .clients__link {
@@ -23,10 +30,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 170px;
+  width: 100%;
+  margin: 0 auto;
   height: 92px;
   transition: border-color 250ms $transition-fn, fill 250ms $transition-fn;
-  max-width: 480px;
 
   &:hover,
   &:focus-within {
@@ -37,19 +44,31 @@
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .clients {
-    flex-basis: calc((100% - 30px) / 2);
+    flex-basis: calc((100% - 60px) / 3);
+    max-width: 1199px;
+  }
+  .clients__item {
+    max-width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis: calc((100% - 60px) / 3);
     justify-content: center;
-    min-width: 768px;
-    padding: 0 15px;
-    margin-bottom: 60px;
+    align-items: center;
+    gap: 30px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .clients {
     max-width: 1200px;
-    width: 100%;
-    margin: auto;
-    gap: 30px;
+    margin: 0 auto;
+  }
+  .clients__item {
+    max-width: 100%;
+    margin: 0 auto;
+    flex: none;
+    justify-content: center;
+    align-items: center;
   }
 }
