--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -24,9 +24,8 @@
 
 .modal {
   position: relative;
-  min-width: 320px;
-  max-width: 450px;
-  width: 100%;
+  width: 320px;
+  max-width: 100%;
   height: 609px;
   background-color: $button-text-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -38,9 +37,7 @@
   &__form {
     display: flex;
     flex-direction: column;
-    min-width: 320px;
-  max-width: 450px;
-  width: 100%;
+    max-width: 320px;
   }
 
   &__header {
@@ -79,12 +76,14 @@
   &__input {
     position: relative;
     outline: none;
-    width: 370px;
     height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     padding-left: 42px;
+    margin: auto;
     margin-bottom: 10px;
+    max-width: 100%;
+    
   }
 
   &__comment {
@@ -105,7 +104,7 @@
   &__icon {
     position: absolute;
     top: 40%;
-    left: 3%;
+    left: 13%;
     align-items: center;
     justify-content: center;
     fill: $main-text-color;
