--- a/sass/components/_resets.scss
+++ b/sass/components/_resets.scss
@@ -18,9 +18,11 @@ img {
 
 //MOBILE 480
 
+
 @media screen and (max-width: 768px) {
 .container {
   min-width: 320px;
+  max-width: 1200px;
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
@@ -31,10 +33,10 @@ img {
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .container {
-    max-width: 768px;
     padding: 0 15px;
     margin: 0 auto;
     align-items: center;
+    width: 100%;
   }
 }
 
