--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -21,7 +21,6 @@
     max-width: 450px;
     margin: auto;
     margin-bottom: 30px;
-    
   }
 
   &__img {
@@ -54,36 +53,29 @@
   .team {
     &__list {
       display: flex;
-      flex-wrap: wrap;  
+      flex-wrap: wrap;
     }
 
     &__item {
       display: flex;
       flex-basis: calc((100% - 30px) / 2);
-      flex-wrap: wrap;   
+      flex-wrap: wrap;
     }
   }
 }
 
 @media screen and (min-width: 1200px) {
+  .team__item {
+    margin-bottom: 64px;
+  }
 
- .team__item {
-  margin-bottom: 64px;
- 
- }
-
-.team__list {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  margin: 0 auto;
-  width: 100%;
-  
+  .team__list {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1200px;
+  }
 }
-
-}
-
-
-
-
