--- a/css/main.css
+++ b/css/main.css
@@ -1244,8 +1244,8 @@ img {
 
 .modal {
   position: relative;
-  width: 320px;
-  max-width: 100%;
+  max-width: 528px;
+  width: 100%;
   height: 609px;
   background-color: white;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1265,7 +1265,8 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  max-width: 320px;
+  max-width: 528px;
+  width: 100%;
 }
 .modal__header {
   font-weight: 700;
@@ -1286,7 +1287,10 @@ img {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 4px;
-  margin: auto;
+  margin: 0 auto;
+  margin-left: 40px;
+  margin-right: 40px;
+  max-width: 100%;
   font-weight: 400;
   font-size: 12px;
   line-height: 0.875em;
@@ -1310,14 +1314,15 @@ img {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 42px;
-  margin: auto;
+  margin: 0 auto;
   margin-bottom: 10px;
-  max-width: 100%;
+  width: 100%;
 }
 .modal__comment {
   resize: none;
   outline: none;
-  width: 370px;
+  margin: 0 auto;
+  width: 100%;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -1343,6 +1348,11 @@ img {
 
 .checkbox {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   font-weight: 400;
   font-size: 12px;
   margin-top: 20px;
