--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -24,8 +24,8 @@
 
 .modal {
   position: relative;
-  width: 320px;
-  max-width: 100%;
+  max-width: 528px;
+  width: 100%;
   height: 609px;
   background-color: $button-text-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -37,7 +37,8 @@
   &__form {
     display: flex;
     flex-direction: column;
-    max-width: 320px;
+    max-width: 528px;
+    width: 100%;
   }
 
   &__header {
@@ -55,7 +56,10 @@
     display: flex;
     flex-direction: column;
     gap: 4px;
-    margin: auto;
+    margin: 0 auto;
+    margin-left: 40px;
+    margin-right: 40px;
+    max-width: 100%;
     font-weight: 400;
     font-size: 12px;
     line-height: 0.875em;
@@ -80,16 +84,16 @@
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     padding-left: 42px;
-    margin: auto;
+    margin: 0 auto;
     margin-bottom: 10px;
-    max-width: 100%;
-    
+    width: 100%;
   }
 
   &__comment {
     resize: none;
     outline: none;
-    width: 370px;
+    margin: 0 auto;
+    width: 100%;
     height: 120px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
@@ -113,6 +117,8 @@
 
 .checkbox {
   position: relative;
+  display: flex;
+  flex-wrap: wrap;
   font-weight: 400;
   font-size: 12px;
   margin-top: 20px;
@@ -181,25 +187,22 @@
   }
 
   .checkbox {
+    margin-left: 79px;
+    margin-right: 54px;
 
-  margin-left: 79px;
-  margin-right: 54px;
+    &__terms {
+      font-size: 14px;
+    }
 
-  &__terms {
-  font-size: 14px;
-}
+    &__icon {
+      top: 10%;
+      right: 102%;
+    }
 
-&__icon {
-    top: 10%;
-    right: 102%;
-   }
-
-   &__input {
-   display: none;
+    &__input {
+      display: none;
+    }
   }
-}
-
-
 }
 
 // .backdrop {
