--- a/css/main.css
+++ b/css/main.css
@@ -1244,7 +1244,7 @@ img {
 
 .modal {
   position: relative;
-  max-width: 528px;
+  max-width: 450px;
   width: 100%;
   height: 609px;
   background-color: white;
@@ -1336,7 +1336,7 @@ img {
 .modal__icon {
   position: absolute;
   top: 40%;
-  left: 13%;
+  left: 3%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1361,16 +1361,15 @@ img {
   margin-bottom: 0;
   color: #757575;
 }
-.checkbox__input {
-  position: relative;
-  opacity: 0;
-}
 .checkbox__icon {
   position: absolute;
   fill: white;
   top: 10%;
   right: 97%;
   border: 1px solid #212121;
+}
+.checkbox__input {
+  display: none;
 }
 input:checked + .checkbox__icon {
   fill: #2196f3;
@@ -1396,7 +1395,7 @@ input:checked + .checkbox__icon {
 
 @media screen and (min-width: 1200px) {
   .modal {
-    width: 528px;
+    max-width: 528px;
     height: 581px;
   }
   .modal__header {
