--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -24,7 +24,7 @@
 
 .modal {
   position: relative;
-  max-width: 528px;
+  max-width: 450px;
   width: 100%;
   height: 609px;
   background-color: $button-text-color;
@@ -108,7 +108,7 @@
   &__icon {
     position: absolute;
     top: 40%;
-    left: 13%;
+    left: 3%;
     align-items: center;
     justify-content: center;
     fill: $main-text-color;
@@ -127,10 +127,7 @@
   margin-bottom: 0;
   color: $contactncontent-text-color;
 
-  &__input {
-    position: relative;
-    opacity: 0;
-  }
+ 
 
   &__icon {
     position: absolute;
@@ -139,6 +136,10 @@
     right: 97%;
     border: 1px solid $main-text-color;
   }
+
+  &__input {
+      display: none;
+    }
 
   input:checked + &__icon {
     fill: $button-backgroundnhover-color;
@@ -162,9 +163,10 @@
   }
 }
 
+
 @media screen and (min-width: 1200px) {
   .modal {
-    width: 528px;
+    max-width: 528px;
     height: 581px;
 
     &__header {
