banner and mobile menu button

--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -81,7 +81,7 @@
     .banner {
      background-color: $mainheadline-footer-color;
   background-image: linear-gradient($gradient, $gradient),
-    url(../images/img-background-desktop@2x.jpg);
+    url(../images/img-background@2x.jpg);
     }
   }
 }
